--- a/CS Template/DeviceSetup.xaml
+++ b/CS Template/DeviceSetup.xaml
@@ -14,5 +14,6 @@
            VerticalAlignment="Top" Click="accStart_Click"/>
         <Button x:Name="accStop" Content="Stop" HorizontalAlignment="Stretch" Margin="10,47,10,0" 
            VerticalAlignment="Top" Click="accStop_Click"/>
+        <TextBlock x:Name="orientation" Text="Orientation:" FontSize="30" Margin="10,112,884,0" />
     </Grid>
 </Page>
